stylesheet.less
/* ... */
.widget.navigation ul.align-center li
{
    text-align: center;
    background-image: none!important;
}

.widget.navigation ul.align-left
{   
    text-align: left;
}

.widget.navigation ul.align-right li
{
    text-align: right;
    background-image: none!important;
}


.widget.navigation ul li 
{
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    display: block;
    list-style: none;
    width: 100%;
    border-top: 1px solid darken(@color-swatch2,5%);
    background-color: none;
    background-image: image('/mrandmrs/images/nav-arrow.png');
    background-repeat: no-repeat;
    background-position: center right;
   
    
    /* fonts */
    font-family:@font-swatch6-font-family;
    font-size:@font-swatch5-font-size;
    text-transform: uppercase;
    letter-spacing: 1px;
}
.widget.navigation ul li a
{
    display: block;
    padding: 18px 20px;
    color: lighten(@color-swatch4,25%);
    font-weight: 400;
    text-decoration: none;
}

.widget.navigation ul li:last-child
{
    border-right: none;
    border-bottom: 1px solid darken(@color-swatch2,5%);
}

.navigation.nm-3-tabs ul li:last-child, .navigation.nm-4-tabs ul li:last-child
{
    border-bottom: none;
}

.widget.navigation ul li:hover
{
    background-color: none;
    cursor: pointer;
    box-shadow: inset 0px 0px 4px rgba(85,85,85,0.1);
}

.widget.navigation ul li:hover a
{
    color: @color-swatch3;
}

.widget.navigation.nm-buttons ul {
    background-image: none;
}

.widget.navigation.nm-buttons ul li {
    background-image: image('/mrandmrs/images/header-bg.png'), image('/mrandmrs/images/nav-arrow.png')!important;
    background-repeat: repeat, no-repeat;
    border: 1px solid darken(@color-swatch2,5%)!important;
}

/* Extended Navigation */

.widget.extendednavigation 
{
}

.widget.extendednavigation ul.align-center li
{
    text-align: center;
    background-image: none!important;
}

.widget.extendednavigation ul.align-left
{   
    text-align: left;
}

.widget.extendednavigation ul.align-right li
{
    text-align: right;
    background-image: none!important;
}

.widget.extendednavigation ul {
    padding: 0;     
    margin: 0;
    moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    list-style: none outside none;
    margin: 0;
    overflow-x: hidden;
    overflow-y: auto;
    padding: 0;
    background-image: image('/mrandmrs/images/header-bg.png');
    background-repeat: repeat;
}
            
.widget.extendednavigation ul li {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    display: block;
    list-style: none;
    width: 100%;
    border-top: 1px solid darken(@color-swatch2,5%);
    border-color: darken(@color-swatch2,5%);
    background-color: none;
    background-image: image('/mrandmrs/images/nav-arrow.png');
    background-repeat: no-repeat;
    background-position: center right;
   
    
    /* fonts */
    font-family:@font-swatch6-font-family;
    font-size:@font-swatch5-font-size;
    text-transform: uppercase;
    letter-spacing: 1px;
}

.widget.extendednavigation ul li:hover {
    background-color: none;
    cursor: pointer;
    box-shadow: inset 0px 0px 4px rgba(85,85,85,0.1);
    border-top: 1px solid darken(@color-swatch1,10%);
}

.widget.extendednavigation ul li:last-child {
    border-bottom: 1px solid darken(@color-swatch2,5%);
}

.widget.extendednavigation ul li.folder, .widget.extendednavigation ul li.folder a {
    background-image: image('/mrandmrs/images/arrow-down.png');
    background-repeat: no-repeat;
    background-position: right center;
}

.widget.extendednavigation ul li.folder .text 
{
    display:inline-block;
    padding: 18px 20px;
    color: lighten(@color-swatch4,25%);
}

.widget.extendednavigation ul li.folder ul li .text 
{
    padding: 0px;
}

.widget.extendednavigation ul li span.menu-icon {
    margin-right: 5px;
}

.widget.extendednavigation ul.align-right li.folder a {
    background-position: 0px center;
}

.widget.extendednavigation ul li.folder a {
     -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    display: block;
    list-style: none;
    width: 100%;
}

.widget.extendednavigation ul li a
{
    display: block;
    padding: 18px 20px;
    color: lighten(@color-swatch4,25%);
    font-weight: 400;
    text-decoration: none;
}

.widget.extendednavigation ul li a:hover {
    color: @color-swatch3;
}

.widget.extendednavigation li ul {
    display: none;
}

.widget.extendednavigation ul li:hover ul {
    display: block;
    background-color: @color-swatch1;
    text-transform: none;
    letter-spacing: 0;
}

.widget.extendednavigation ul li:hover ul li {
    padding-left: 10px;
    background-color: @color-swatch1;
    background-image: none;
    border-bottom: none;
    letter-spacing: 0;
    text-transform: none;
    font-size: 16px;
}

.widget.extendednavigation ul li:hover ul li a {
    background-image: none;
}

.widget.extendednavigation.nm-3-tabs ul li {
    border-bottom: 1px solid darken(@color-swatch2,5%);
}

.widget.extendednavigation.nm-3-tabs ul li:hover ul li, .widget.extendednavigation.nm-4-tabs ul li:hover ul li {
    border-bottom: 1px solid darken(@color-swatch2,5%);
}

.widget.extendednavigation ul.align-right li.folder {
    background-position: left center;
}  

/* Twitter CSS */
/* 
    Document   : twitter
    Created on : 04-Jul-2012, 14:15:32
    Author     : Dom
    Description: Twitter Wishful
*/


.widget.twitter {
}

.widget.twitter a {
   color: @color-swatch4;
   font-size:@font-swatch5-font-size;
   text-decoration: none;
}

.widget.twitter a:hover {
    text-decoration: underline;
}

.widget.twitter ul {
    padding: 20px;
    margin: 0;
}
/* ... */

